--- a/requirements.txt
+++ b/requirements.txt
@@ -92,8 +92,7 @@ python-json-logger==3.3.0
 python-multipart==0.0.20
 pytimeparse==1.1.8
 pytz==2025.2
-pywin32==311
-pywin32-ctypes==0.2.3
+pywin32==311; sys\_platform == 'win32'
 PyYAML==6.0.2
 requests==2.32.5
 requests-oauthlib==2.0.0
